# raylib-cross-demo

./: .gitignore  CMakeLists.txt  setup.sh
.cache/clangd/index/: ini.c.A763376D0A32173C.idx  ini.h.98A5C853E4A77CD8.idx  main.c.E0B1D35F2EB283E7.idx
assets/: cfg.ini
include/: hex2color.h  int_nicknames.h  load_cfg.h  str2int.h
src/: hex2color.c  load_cfg.c  main.c  str2int.c
